Added k-opt and hard-fixing

--- a/latex_report/sections/callback.tex
+++ b/latex_report/sections/callback.tex
@@ -1,5 +1,6 @@
 \section{Resolution with the callback method}
-In sectio\ref{sec:problem-resolution} we introduce the fastest resolution method we've seen so far, but its implementation is a little bit tricky, and most of all not really "easthetic" CAMBIARE.\\
+\label{sec:branch_and_cut}
+In section \ref{sec:problem-resolution} we introduce the fastest resolution method we've seen so far, but its implementation is a little bit tricky, and most of all not really "easthetic" CAMBIARE.\\
 In this section we are going to explore the same loop method (so we will reject the solutions with some sub-tours) but this time we will implement its better version, also known as branch and cut.
 
 \subsection{The callbacks}
