--- a/latex_report/sections/setup.tex
+++ b/latex_report/sections/setup.tex
@@ -31,7 +31,7 @@ Now that the enviroment is setted up we can start by creating our first variable
 	  			&		&	& 4x_2 & + &7x_3 &\ge 20\\
 \end{array}\]%
 \begin{align*}
-x_i \text{intero}\
+x_i \; \text{integer}\
 \end{align*}
 
 Thius problem can be seen as a matrix composed by rows and columns, each column correspond to a variable, each row correspond to a constraint that the problem as to satisfy. Using the callable library of CPLEX we can build the rows and columns easily.\\
