Started genetic algorithm

--- a/latex_report/capitolo4/metaheuristic.tex
+++ b/latex_report/capitolo4/metaheuristic.tex
@@ -8,7 +8,7 @@ The variable neighborhood search (VNS) is the first metaheuristic approach prese
 
 The instance of the problem can be seen as a function with its local minima, local maxima, and so on. During the utilization of some heuristic techniques, it is possible that the process remains stuck in a sub-optimal area. The way in which it tries to escape from this region is done by changing the \textit{neighborhood} of the solution: some data are modified and then a new minimum is searched.
 
-In this report, the adjustment of the neighborhood is performed by a perturbation phase in which is applied a $k$-opt kick. This change is performed by selecting randomly a $k$ set of edges and then replacing them with others in order to obtain a poor solution. In particular, the procedure done is the following: a $2$-opt refining is applied to a reference solution, once the minimum is reached a kick is given to the solution to worsening the solution. Then the $2$-opt refining approach is used again to find a new minimum. In my implementation are implemented three perturbations: 3, 5, and 7.
+In this report, the adjustment of the neighborhood is performed by a perturbation phase in which is applied a $k$-opt kick. This change is performed by selecting randomly a $k$ set of edges and then replacing them with others in order to obtain a poor solution. In particular, the procedure done is the following: a $2$-opt refining is applied to a reference solution, once the minimum is reached a kick is given to the solution to worsening the solution. Then the $2$-opt refining approach is used again to find a new minimum. In my implementation are implemented three perturbations: 3, 5, and 7. An example of implementation can be seen in Algorithm \ref{algo:vns}.
 
 \begin{algorithm}
 	\caption{VNS}\label{algo:vns}
