Added generation of children

--- a/latex_report/bibliografia.tex
+++ b/latex_report/bibliografia.tex
@@ -10,6 +10,10 @@
 
 \bibitem{hamming-distance} \textit{Hamming distance}, \url{https://en.wikipedia.org/wiki/Hamming_distance}, last consultation: 05/02/2022.
 
+\bibitem{tsp-lib} \textit{TSPLIB}, \url{http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/}, last consultation: 09/02/2022.
+
+
+
 
 \end{thebibliography}
 
