--- a/latex_report/ro2.tex
+++ b/latex_report/ro2.tex
@@ -50,6 +50,10 @@
 \label{chapter:primo_capitolo} %Label per creare riferimenti al capitolo
 \input{intro_cap1.tex} %File in cui verrà scritto il capitolo
 
+\chapter{Code setup}
+\label{chapter:code-setup}
+\input{intro_code_setup.tex}
+
 %\clearpage{\pagestyle{plain}\cleardoublepage}
 \chapter{Compact models} 
 \label{chapter:compact-models} 
