Started result section

--- a/latex_report/bibliografia.tex
+++ b/latex_report/bibliografia.tex
@@ -12,6 +12,10 @@
 
 \bibitem{tsp-lib} \textit{TSPLIB}, \url{http://comopt.ifi.uni-heidelberg.de/software/TSPLIB95/}, last consultation: 09/02/2022.
 
+\bibitem{mtz-note}Sawik, T. A note on the Miller-Tucker-Zemlin model for the asymmetric traveling salesman problem. {\em Bulletin Of The Polish Academy Of Sciences Technical Sciences}. \textbf{64} (2016,9)
+
+\bibitem{compact-modesl}Orman, A. \& Williams, H. A Survey of Different Integer Programming Formulations of the Travelling Salesman Problem.  (2007)
+
 
 
 
